--- a/music-project/package.json
+++ b/music-project/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@tsparticles/all": "^3.5.0",
     "@tsparticles/react": "^3.0.0",
+    "framer-motion": "^11.11.11",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "react-tilt": "^1.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
