--- a/music-project/package.json
+++ b/music-project/package.json
@@ -15,6 +15,7 @@
     "framer-motion": "^11.11.11",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-intersection-observer": "^9.13.1",
     "react-tilt": "^1.0.2"
   },
   "devDependencies": {
